--- a/composer.json
+++ b/composer.json
@@ -17,6 +17,14 @@
             "Payavel\\Subscription\\Database\\Factories\\": "database/factories/"
         }
     },
+    "autoload-dev": {
+        "psr-4": {
+            "Payavel\\Subscription\\Tests\\": "tests/"
+        }
+    },
+    "scripts": {
+        "test": "vendor/bin/phpunit"
+    },
     "extra": {
         "laravel": {
             "providers": [
